# infiniterra

./: .gitignore  CMakeLists.txt  README.md  ideas.txt  imgui.ini  terrain-lod.sln  terrain-lod.vcxproj  terrain-lod.vcxproj.filters
docs/: report.tex
local_libs/include/: Cubemap.h  EBO.h  GLErrors.h  Skybox.h  Texture.h  VAO.h  VBO.h  WindowIO.h  camera.h  compute_shader.h  mesh.h  model.h  shader.h  terrain.h  terrain_generation.h  window_io.h
local_libs/include/glad/: glad.h
local_libs/lib/: Cubemap.cpp  Skybox.cpp  Texture.cpp  VBO.cpp
local_libs/libs/: Cubemap.cpp  EBO.cpp  Skybox.cpp  Texture.cpp  VAO.cpp  assimp-vc143-mtd.exp  glfw3.lib  terrain.cpp  terrain_generation.cpp
shaders/: compute_shader.comp  compute_shader.cs  screen_quad.vs  shader.fs  terrain.frag  terrain.fs  terrain.geom  terrain.tcs  terrain.tes  terrain.tesc  terrain.tese  terrain.tesse  terrain.vs  terrain_generator.comp  wireframe.fs
src/: Skybox.cpp  TerrainLOD.cpp  glad.c  main.cpp  test-main.cpp
